# indirect_jmp

./: CMakeLists.txt  README.md  run.sh
examples/jump_table/: jump_table.cpp
include/sba/: block.h  common.h  config.h  domain.h  eval.h  expr.h  function.h  insn.h  object.h  program.h  rtl.h  scc.h  state.h  system.h  type.h
src/sba/: block.cpp  common.cpp  domain.cpp  expr.cpp  framework.cpp  function.cpp  insn.cpp  parser.cpp  program.cpp  rtl.cpp  scc.cpp  state.cpp  system.cpp  type.cpp
test/: gz.py  result.txt  switch  switch.c  switch.txt  test  test.bc  test.c  test.clang  test.config.json  test.cpp  test.dsm  test.ll  vfunc  vfunc.txt
test/t/: test  test.config.json  test.dsm
